[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool]
[tool.poetry]
authors = ["Mitachibana <<>>"]
description = ""
name = "roguebot-1"
version = "0.1.0"
[tool.poetry.dependencies]
Cogs = "^0.4.4"
DateTime = "^4.3"
DiscordUtils = "^1.3.4"
PyYAML = "^5.4.1"
QtPy = "^1.9.0"
beautifulsoup4 = "^4.9.3"
braceexpand = "^0.1.7"
charset-normalizer = "^2.0.3"
colorama = "^0.4.4"
discord = "^1.7.3"
discord-ext-alternatives = "^2021.4.13"
"discord.py" = "^1.7.3"
firebase-admin = "^5.0.1"
google-api-core = "^1.31.0"
google-api-python-client = "^2.14.1"
google-auth-httplib2 = "^0.1.0"
google-cloud-core = "^1.7.1"
google-cloud-firestore = "^2.2.0"
google-cloud-storage = "^1.41.1"
google-crc32c = "^1.1.2"
google-resumable-media = "^1.3.1"
googleapis-common-protos = "^1.53.0"
httplib2 = "^0.19.1"
import-expression = "^1.1.4"
iso8601 = "^0.1.16"
jishaku = "^2.1.0"
lxml = "^4.6.3"
proto-plus = "^1.19.0"
python = "^3.8"
python-dotenv = "^0.19.0"
pytz = "^2021.1"
pyzmq = "^22.1.0"
simplejson = "^3.17.3"
soupsieve = "^2.2.1"
tzlocal = "^2.1"
uritemplate = "^3.0.1"
zmq = "^0.0.0"
"zope.interface" = "^5.4.0"
[tool.poetry.dev-dependencies]
